Health check api changes
